# agridata-mcp

./: .dockerignore  .gitignore  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  LICENSE  MEMORY.md  README.md  claude_desktop_config.json  pyproject.toml  schemas.json  test_bibliography.py  test_bibliography_audit.py  test_climate.py  test_crops.py  test_foundation.py  test_rainfall_integration.py  test_stress.py  value_hints.json
.github/workflows/: deploy.yml
agridata_TN_Scraped_26-11-2026/format_api/: 21eab67d_station-kebili-avfa.api  5a7bfccb_donnees-climatiques-.api  679ebe4d_donnees-climatiques-.api  8bbc1fc1_donnees-climatiques-.api  cdb16ca6_donnees-climatiques-.api  d8bb61fd_station-oued-souhil-.api
agridata_TN_Scraped_26-11-2026/format_csv/: 0257b538_estimation-de-la-pro.csv  028758da_station-climatique-k.csv  039c7628_station-climatique-s.csv  04029823_exportation-des-prod.csv  046b5750_gdaps-crees-dans-les.csv  04806ecc_realisation-de-l-ode.csv  0554c833_station-de-kasserine.csv  066616ab_production-de-l-arbo.csv  06c17dc4_repartition-des-terr.csv  08944538_realisations-de-l-od.csv  09718ed1_estimation-de-la-pro.csv  (+309 more)
scripts/: build_snapshot.py  build_value_catalog.py  extract_data.py  extract_value_hints.py  extract_value_hints_from_parquet.py  extract_vocabulary.py  regenerate_domains.py  search_cereales.py  search_cereales_beja.py  search_data.py
snapshot/: scrape_index.json
tests/: test_ckan_client.py  test_download_reason.py  test_registry_snapshot.py  test_schema_registry.py  test_snapshot_client.py  test_snapshot_download.py  test_snapshot_search.py
(+1792 files in other folders)
