[project]
name = "tanitdata"
version = "3.0.1"
description = "MCP server for Tunisia's agricultural open data portal (agridata.tn)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]",
    "httpx",
    "pydantic",
    "python-dotenv",
    "openpyxl",
    "boto3",
    "duckdb>=1.0",
    "xlrd>=2.0",
]

[project.scripts]
tanitdata = "tanitdata.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tanitdata"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
